@@ -1,5 +1,11 @@
 2009-10-06  Miguel de Dios  <miguel.dedios@artica.es>
 
+	* operation/agentes/estado_generalagente.php,
+	operation/agentes/estado_agente.php: change the intervals, and use the
+	new function "getNextAgentContact" for interval in agent view.
+
+2009-10-06  Miguel de Dios  <miguel.dedios@artica.es>
+
 	* include/functions_agents.php: add the function "getNextAgentContact"
 	that return the percentage of time for next contanct of agent (pass as
 	id_agent).
